fix: remove z-index

--- a/packages/components-css/src/link/_mixin.scss
+++ b/packages/components-css/src/link/_mixin.scss
@@ -17,10 +17,6 @@
   inline-size: 1em;
 }
 
-@mixin rhc-link--focus-visible {
-  z-index: 1;
-}
-
 @mixin rhc-link--inline {
   display: inline;
 }
